actual debug log u can log stuff to and is very cool

--- a/Halacint/Halacint.csproj
+++ b/Halacint/Halacint.csproj
@@ -4,7 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Halacint</RootNamespace>
-    <StartupObject>Halacint.Program</StartupObject>
+    <StartupObject>Halacint.GameLoop</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
